# sigaebotv2

./: .gitignore  main.py  pyproject.toml  run.Dockerfile
.github/workflows/: action.yaml
addon/: stab.py
config/: const.py  env.py
