[tool.poetry]
name = "sigaebot-v2"
version = "0.1.0"
description = ""
authors = ["김민수 <sigae@protonmail.com>"]
readme = "README.md"
packages = [{include = "sigaebot_v2"}]

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
